Added annotation processor for lombok to the pom maven plugin